force-app/main/default/objects/Stand_Detail__c/Stand_Detail__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center -  This object defines about Stand detail for a stand</description>
    <label>Stand Detail</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Stand Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stand Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>