force-app/main/default/objects/Stand_Detail__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Performance bond amount</description>
    <label>Amount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>