force-app/main/default/objects/Stand_Detail__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Set current date when ops user approved</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>