force-app/main/default/objects/Stand_Detail__c/fields/Are_any_other_hanging_structure__c.field-meta.xml
<CustomField>
    <fullName>Are_any_other_hanging_structure__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <label>Are any other hanging structure?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sound</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>