force-app/main/default/objects/Stand_Detail__c/fields/Are_you_aware_of_the_onsite_welfare__c.field-meta.xml
<CustomField>
    <fullName>Are_you_aware_of_the_onsite_welfare__c</fullName>
    <description>Are you aware of the onsite welfare facilities; E.g. Toilets, Catering, Emergency Assembly &amp; Fire Aid points</description>
    <inlineHelpText>Are you aware of the onsite welfare facilities; E.g. Toilets, Catering, Emergency Assembly &amp; Fire Aid points</inlineHelpText>
    <label>Are you aware of the onsite welfare</label>
    <length>10</length>
    <type>Text</type>
</CustomField>