force-app/main/default/objects/Stand_Detail__c/fields/Breakdown_Construction_Time__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Construction_Time__c</fullName>
    <label>Breakdown Construction Time (Hours)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>