force-app/main/default/objects/Stand_Detail__c/fields/Breakdown_Crew_Onsite_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Crew_Onsite_Arrival_Time__c</fullName>
    <label>Breakdown Crew Onsite Arrival Time</label>
    <type>DateTime</type>
</CustomField>