force-app/main/default/objects/Stand_Detail__c/fields/Breakdown_crew_working_on_other_stands__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_crew_working_on_other_stands__c</fullName>
    <label>Are the crew working on other stands?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>