force-app/main/default/objects/Stand_Detail__c/fields/Breakdown_Please_list_the_Stands_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Please_list_the_Stands_Numbers__c</fullName>
    <label>Breakdown Please list the Stands Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>