force-app/main/default/objects/Stand_Detail__c/fields/Breakdown_Size_of_Crew__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Size_of_Crew__c</fullName>
    <label>Breakdown Size of Crew</label>
    <length>20</length>
    <type>Text</type>
</CustomField>