force-app/main/default/objects/Stand_Detail__c/fields/Build_a_food_preparation_area__c.field-meta.xml
<CustomField>
    <fullName>Build_a_food_preparation_area__c</fullName>
    <label>Build a food preparation area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>