force-app/main/default/objects/Stand_Detail__c/fields/Build_Construction_Time__c.field-meta.xml
<CustomField>
    <fullName>Build_Construction_Time__c</fullName>
    <description>example 6H - 96H</description>
    <label>Construction Time (Hours)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>