force-app/main/default/objects/Stand_Detail__c/fields/Build_Crew_Onsite_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Build_Crew_Onsite_Arrival_Time__c</fullName>
    <label>Crew Onsite Arrival Time</label>
    <type>DateTime</type>
</CustomField>