force-app/main/default/objects/Stand_Detail__c/fields/Build_list_Stands_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Build_list_Stands_Numbers__c</fullName>
    <label>Please list the Stands Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>