force-app/main/default/objects/Stand_Detail__c/fields/Build_Size_of_Crew__c.field-meta.xml
<CustomField>
    <fullName>Build_Size_of_Crew__c</fullName>
    <label>Size of Crew</label>
    <length>20</length>
    <type>Text</type>
</CustomField>