force-app/main/default/objects/Stand_Detail__c/fields/Contractor_Agreement_CA__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Agreement_CA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether one agrees to contractor&apos;s agreement or not.</description>
    <label>Contractor Agreement(CA)</label>
    <type>Checkbox</type>
</CustomField>