force-app/main/default/objects/Stand_Detail__c/fields/Contractor_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contractor Stand detail Mapping</description>
    <label>Contractor Mapping</label>
    <referenceTo>Contractor_Mapping__c</referenceTo>
    <relationshipLabel>Stand Details</relationshipLabel>
    <relationshipName>Stand_Details</relationshipName>
    <type>Lookup</type>
</CustomField>