force-app/main/default/objects/Stand_Detail__c/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <label>Current Step</label>
    <length>3</length>
    <type>Text</type>
</CustomField>