force-app/main/default/objects/Stand_Detail__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Signature date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>