force-app/main/default/objects/Stand_Detail__c/fields/Display_vehicles_requirement_on_stand__c.field-meta.xml
<CustomField>
    <fullName>Display_vehicles_requirement_on_stand__c</fullName>
    <label>Display vehicles requirement on stand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>