force-app/main/default/objects/Stand_Detail__c/fields/Does_the_contractor_hold_adequate_public__c.field-meta.xml
<CustomField>
    <fullName>Does_the_contractor_hold_adequate_public__c</fullName>
    <description>Does the contractor hold adequate public liability insurance?</description>
    <inlineHelpText>Does the contractor hold adequate public liability insurance</inlineHelpText>
    <label>Does the contractor hold adequate public</label>
    <length>10</length>
    <type>Text</type>
</CustomField>