force-app/main/default/objects/Stand_Detail__c/fields/Dose_design_include_glass_walls__c.field-meta.xml
<CustomField>
    <fullName>Dose_design_include_glass_walls__c</fullName>
    <label>Dose design include glass walls?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>