force-app/main/default/objects/Stand_Detail__c/fields/Double_Decker__c.field-meta.xml
<CustomField>
    <fullName>Double_Decker__c</fullName>
    <label>Is Double Decker?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>