force-app/main/default/objects/Stand_Detail__c/fields/Early_Access_Cost__c.field-meta.xml
<CustomField>
    <fullName>Early_Access_Cost__c</fullName>
    <description>Early Access Cost for stand</description>
    <label>Early Access Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>