force-app/main/default/objects/Stand_Detail__c/fields/Early_Access_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Early_Access_Date_Time__c</fullName>
    <description>Early Access Date and Time for stand</description>
    <label>Early Access Date/Time</label>
    <type>DateTime</type>
</CustomField>