force-app/main/default/objects/Stand_Detail__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relate Stand Detail with Edition object</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Stand Details</relationshipLabel>
    <relationshipName>Stand_Details</relationshipName>
    <type>Lookup</type>
</CustomField>