force-app/main/default/objects/Stand_Detail__c/fields/Equipment_Required_for_Build_up__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Required_for_Build_up__c</fullName>
    <label>Equipment Required for Build up</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crane</fullName>
            </value>
            <value>
                <fullName>Genie Manual Lift</fullName>
            </value>
            <value>
                <fullName>Compressor</fullName>
            </value>
            <value>
                <fullName>Forklift</fullName>
            </value>
            <value>
                <fullName>Scaffolding</fullName>
            </value>
            <value>
                <fullName>Power Tools</fullName>
            </value>
            <value>
                <fullName>MWEP</fullName>
            </value>
            <value>
                <fullName>Ladders</fullName>
            </value>
            <value>
                <fullName>Hand Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>