force-app/main/default/objects/Stand_Detail__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Stand Design File Name</description>
    <label>File Name</label>
    <type>TextArea</type>
</CustomField>