force-app/main/default/objects/Stand_Detail__c/fields/Flame_retarded_material__c.field-meta.xml
<CustomField>
    <fullName>Flame_retarded_material__c</fullName>
    <label>Flame retarded material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>