force-app/main/default/objects/Stand_Detail__c/fields/Free_Text_for_the_team_to_customize_base__c.field-meta.xml
<CustomField>
    <fullName>Free_Text_for_the_team_to_customize_base__c</fullName>
    <description>Free Text for the team to customize based on show requirement</description>
    <label>Free Text for the team to customize base</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>