force-app/main/default/objects/Stand_Detail__c/fields/Heavy_machinery_equipment_lift_require__c.field-meta.xml
<CustomField>
    <fullName>Heavy_machinery_equipment_lift_require__c</fullName>
    <label>Heavy machinery/equipment lift require</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>