force-app/main/default/objects/Stand_Detail__c/fields/Including_rigging_in_the_design__c.field-meta.xml
<CustomField>
    <fullName>Including_rigging_in_the_design__c</fullName>
    <label>Including rigging in the design</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>