force-app/main/default/objects/Stand_Detail__c/fields/Incorporate_any_water_feature__c.field-meta.xml
<CustomField>
    <fullName>Incorporate_any_water_feature__c</fullName>
    <label>Incorporate any water feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>