force-app/main/default/objects/Stand_Detail__c/fields/Is_Breakdown_Equipment_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Breakdown_Equipment_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Breakdown Equipment Required?</label>
    <type>Checkbox</type>
</CustomField>