force-app/main/default/objects/Stand_Detail__c/fields/Is_BuildUp_Equipment_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_BuildUp_Equipment_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is BuildUp Equipment Required?</label>
    <type>Checkbox</type>
</CustomField>