force-app/main/default/objects/Stand_Detail__c/fields/Is_Complex_Structure__c.field-meta.xml
<CustomField>
    <fullName>Is_Complex_Structure__c</fullName>
    <label>Is Complex Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>