force-app/main/default/objects/Stand_Detail__c/fields/Is_Heavy_Machinery__c.field-meta.xml
<CustomField>
    <fullName>Is_Heavy_Machinery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to identify if exhibitor have heavy machinery or vehicle on their stand</description>
    <inlineHelpText>Field to identify if exhibitor have heavy machinery or vehicle on their stand</inlineHelpText>
    <label>Is Heavy Machinery</label>
    <type>Checkbox</type>
</CustomField>