force-app/main/default/objects/Stand_Detail__c/fields/Is_One_side_open_stand__c.field-meta.xml
<CustomField>
    <fullName>Is_One_side_open_stand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true means stand is open from one side.</description>
    <label>Is One side open stand</label>
    <type>Checkbox</type>
</CustomField>