force-app/main/default/objects/Stand_Detail__c/fields/Is_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Is_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is rejected</description>
    <label>Is Rejected</label>
    <type>Checkbox</type>
</CustomField>