force-app/main/default/objects/Stand_Detail__c/fields/Is_Required_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Required_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required Document Uploaded?</label>
    <type>Checkbox</type>
</CustomField>