force-app/main/default/objects/Stand_Detail__c/fields/Is_the_appointed_contractor_travelling__c.field-meta.xml
<CustomField>
    <fullName>Is_the_appointed_contractor_travelling__c</fullName>
    <description>Is the appointed contractor travelling less than 50 miles ( 80 Km) of the venue?</description>
    <inlineHelpText>Is the appointed contractor travelling less than 50 miles ( 80 Km) of the venue? (Yes/No)</inlineHelpText>
    <label>Is the appointed contractor travelling</label>
    <length>10</length>
    <type>Text</type>
</CustomField>