force-app/main/default/objects/Stand_Detail__c/fields/Is_Two_side_open_stand__c.field-meta.xml
<CustomField>
    <fullName>Is_Two_side_open_stand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true means stand is open from two sides.</description>
    <label>Is Two side open stand</label>
    <type>Checkbox</type>
</CustomField>