force-app/main/default/objects/Stand_Detail__c/fields/Is_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Is_Vehicles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to identify if exhibitor have vehicles on their stand</description>
    <inlineHelpText>Field to identify if exhibitor have vehicles on their stand</inlineHelpText>
    <label>Is Vehicles</label>
    <type>Checkbox</type>
</CustomField>