force-app/main/default/objects/Stand_Detail__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the Stand Details is in use or not</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>