force-app/main/default/objects/Stand_Detail__c/fields/IsDoubleDecker__c.field-meta.xml
<CustomField>
    <fullName>IsDoubleDecker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true then stand is a Double Decker</description>
    <label>IsDoubleDecker</label>
    <type>Checkbox</type>
</CustomField>