force-app/main/default/objects/Stand_Detail__c/fields/Island_Booth_4_sides__c.field-meta.xml
<CustomField>
    <fullName>Island_Booth_4_sides__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true means stand is open from all sides.</description>
    <label>Island Booth (4 sides)</label>
    <type>Checkbox</type>
</CustomField>