force-app/main/default/objects/Stand_Detail__c/fields/IsReceived__c.field-meta.xml
<CustomField>
    <fullName>IsReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is performance bond amount received?</description>
    <label>IsReceived</label>
    <type>Checkbox</type>
</CustomField>