force-app/main/default/objects/Stand_Detail__c/fields/IsRigging__c.field-meta.xml
<CustomField>
    <fullName>IsRigging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true meand stand have a structural rigging component</description>
    <label>IsRigging</label>
    <type>Checkbox</type>
</CustomField>