force-app/main/default/objects/Stand_Detail__c/fields/Large_machinery_on_the_stand_area__c.field-meta.xml
<CustomField>
    <fullName>Large_machinery_on_the_stand_area__c</fullName>
    <label>Large machinery on the stand area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>