force-app/main/default/objects/Stand_Detail__c/fields/LED_Lighting__c.field-meta.xml
<CustomField>
    <fullName>LED_Lighting__c</fullName>
    <label>LED Lighting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>