force-app/main/default/objects/Stand_Detail__c/fields/MDF_Panels_or_similar__c.field-meta.xml
<CustomField>
    <fullName>MDF_Panels_or_similar__c</fullName>
    <label>MDF Panels or similar?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>