force-app/main/default/objects/Stand_Detail__c/fields/Onsite_Health_and_Safety_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Health_and_Safety_Contact_Email__c</fullName>
    <label>Onsite Health and Safety Contact Email</label>
    <type>Email</type>
</CustomField>