force-app/main/default/objects/Stand_Detail__c/fields/Onsite_Health_and_Safety_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Health_and_Safety_Contact_Name__c</fullName>
    <description>Onsite Health and Safety Contact Name</description>
    <label>Onsite Health and Safety Contact Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>