force-app/main/default/objects/Stand_Detail__c/fields/Onsite_Health_and_Safety_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Health_and_Safety_Contact_Number__c</fullName>
    <label>Onsite Health and Safety Contact Number</label>
    <type>Phone</type>
</CustomField>