force-app/main/default/objects/Stand_Detail__c/fields/Open_Side__c.field-meta.xml
<CustomField>
    <fullName>Open_Side__c</fullName>
    <description>Open Side</description>
    <label>Open Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Side Open Stand</fullName>
            </value>
            <value>
                <fullName>Two Side Open Stand</fullName>
            </value>
            <value>
                <fullName>Three Side Open Stand</fullName>
            </value>
            <value>
                <fullName>Island Booth (4 sides)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>