force-app/main/default/objects/Stand_Detail__c/fields/Over_600mm_within_the_design__c.field-meta.xml
<CustomField>
    <fullName>Over_600mm_within_the_design__c</fullName>
    <label>Over 600mm within the design</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>