force-app/main/default/objects/Stand_Detail__c/fields/Prefabricated_Offsite__c.field-meta.xml
<CustomField>
    <fullName>Prefabricated_Offsite__c</fullName>
    <label>Prefabricated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>