force-app/main/default/objects/Stand_Detail__c/fields/Print_Name__c.field-meta.xml
<CustomField>
    <fullName>Print_Name__c</fullName>
    <description>Signature name</description>
    <label>Print Name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>