force-app/main/default/objects/Stand_Detail__c/fields/Raw_Materials__c.field-meta.xml
<CustomField>
    <fullName>Raw_Materials__c</fullName>
    <label>Raw Materials (others)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>