force-app/main/default/objects/Stand_Detail__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <description>Receipt Number</description>
    <label>Receipt</label>
    <type>TextArea</type>
</CustomField>