force-app/main/default/objects/Stand_Detail__c/fields/Rejected_Steps__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Steps__c</fullName>
    <label>Rejected Steps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Step 1</fullName>
            </value>
            <value>
                <fullName>Step 2</fullName>
            </value>
            <value>
                <fullName>Step 3</fullName>
            </value>
            <value>
                <fullName>Step 4</fullName>
            </value>
            <value>
                <fullName>Step 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>