force-app/main/default/objects/Stand_Detail__c/fields/Require_Early_Access__c.field-meta.xml
<CustomField>
    <fullName>Require_Early_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if contactor requires early access of satnd to do stand design work at venue.</description>
    <label>Require Early Access?</label>
    <type>Checkbox</type>
</CustomField>