force-app/main/default/objects/Stand_Detail__c/fields/Require_high_value_product_storage__c.field-meta.xml
<CustomField>
    <fullName>Require_high_value_product_storage__c</fullName>
    <label>Require high value product storage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>