force-app/main/default/objects/Stand_Detail__c/fields/Reusable_Materials__c.field-meta.xml
<CustomField>
    <fullName>Reusable_Materials__c</fullName>
    <label>Reusable Materials?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>