force-app/main/default/objects/Stand_Detail__c/fields/Riggering_Options__c.field-meta.xml
<CustomField>
    <fullName>Riggering_Options__c</fullName>
    <description>Riggering Options</description>
    <inlineHelpText>Riggering Options</inlineHelpText>
    <label>Riggering Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hanging structure with logo</fullName>
            </value>
            <value>
                <fullName>Hanging structure without logo</fullName>
            </value>
            <value>
                <fullName>Truss with logo</fullName>
            </value>
            <value>
                <fullName>Truss without logo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>