force-app/main/default/objects/Stand_Detail__c/fields/Rigging_Height__c.field-meta.xml
<CustomField>
    <fullName>Rigging_Height__c</fullName>
    <description>Height of rigging.</description>
    <label>Rigging Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>