force-app/main/default/objects/Stand_Detail__c/fields/Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Name__c</fullName>
    <description>Name of Signatory on stand contract.</description>
    <label>Signatory Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>