force-app/main/default/objects/Stand_Detail__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <formula>IF(ISBLANK(Signature_ContentId__c), &quot;&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+Signature_ContentId__c , &quot;Signature&quot; , 100, 200))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature</label>
    <type>Text</type>
</CustomField>