force-app/main/default/objects/Stand_Detail__c/fields/Signature_ContentId__c.field-meta.xml
<CustomField>
    <fullName>Signature_ContentId__c</fullName>
    <label>Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>