force-app/main/default/objects/Stand_Detail__c/fields/Staircases_built_into_the_design__c.field-meta.xml
<CustomField>
    <fullName>Staircases_built_into_the_design__c</fullName>
    <label>Staircases built into the design</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>