force-app/main/default/objects/Stand_Detail__c/fields/Stand_Detail_Status__c.field-meta.xml
<CustomField>
    <fullName>Stand_Detail_Status__c</fullName>
    <description>Stand Detail Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
                <default>true</default>
                <label>Not started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Pending Sales Approval</fullName>
            </value>
            <value>
                <fullName>Stand Design Rejected/Incomplete</fullName>
            </value>
            <value>
                <fullName>Stand Design Resubmitted</fullName>
            </value>
            <value>
                <fullName>Pending Venue Approval</fullName>
            </value>
            <value>
                <fullName>Tentative Approval</fullName>
            </value>
            <value>
                <fullName>Permission to Build</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>