force-app/main/default/objects/Stand_Detail__c/fields/Stand_Detail_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Stand_Detail_Submitted_On__c</fullName>
    <description>Stand Detail Submitted date</description>
    <label>Stand Detail Submitted On</label>
    <type>Date</type>
</CustomField>