force-app/main/default/objects/Stand_Detail__c/fields/Stand_Height__c.field-meta.xml
<CustomField>
    <fullName>Stand_Height__c</fullName>
    <description>Height of stand in meters</description>
    <label>Stand Height(m)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>