force-app/main/default/objects/Stand_Detail__c/fields/Stand_Type__c.field-meta.xml
<CustomField>
    <fullName>Stand_Type__c</fullName>
    <description>Type of Stand based on structure</description>
    <label>Stand Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Complex</fullName>
            </value>
            <value>
                <fullName>Complex Stand 1</fullName>
            </value>
            <value>
                <fullName>Complex Stand 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>