force-app/main/default/objects/Stand_Detail__c/fields/Subcontractor_Country__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Country__c</fullName>
    <label>Subcontractor Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>