force-app/main/default/objects/Stand_Detail__c/fields/Subcontractor_Email__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Email__c</fullName>
    <label>Subcontractor Email</label>
    <type>Email</type>
</CustomField>