force-app/main/default/objects/Stand_Detail__c/fields/Subcontractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Name__c</fullName>
    <label>Subcontractor Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>