force-app/main/default/objects/Stand_Detail__c/fields/Subcontractor_Number__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Number__c</fullName>
    <label>Subcontractor Number</label>
    <type>Phone</type>
</CustomField>