force-app/main/default/objects/Stand_Detail__c/fields/Submitted_to_Venue_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Venue_On__c</fullName>
    <description>Captures the date of Venue submission.</description>
    <label>Submitted to Venue On</label>
    <type>Date</type>
</CustomField>