force-app/main/default/objects/Stand_Detail__c/fields/Sustainable_frame_and_fabric__c.field-meta.xml
<CustomField>
    <fullName>Sustainable_frame_and_fabric__c</fullName>
    <label>Sustainable frame and fabric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>