force-app/main/default/objects/Stand_Detail__c/fields/Task_Activity__c.field-meta.xml
<CustomField>
    <fullName>Task_Activity__c</fullName>
    <label>Task/Activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main stand</fullName>
            </value>
            <value>
                <fullName>Steel structure</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>Floral</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>