force-app/main/default/objects/Stand_Detail__c/fields/Type_of_rigging__c.field-meta.xml
<CustomField>
    <fullName>Type_of_rigging__c</fullName>
    <label>Type of rigging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Modular</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>