force-app/main/default/objects/Stand_Detail__c/fields/Uploaded_Document_Description__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Document_Description__c</fullName>
    <description>Document description for step 2.</description>
    <label>Uploaded Document Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>